--- a/Front/index.html
+++ b/Front/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>DApp Préstamos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
+  
 </head>
 
 <body>
