--- a/Front/index.html
+++ b/Front/index.html
@@ -45,6 +45,7 @@
                         <input type="number" id="inputMonto" class="form-control mb-2" placeholder="Monto">
                         <input type="number" id="inputPlazo" class="form-control mb-2" placeholder="Plazo (meses)">
                         <input type="number" id="inputMulta" class="form-control mb-3" placeholder="Multa (%)">
+                        <input type="number" id="inputInteres" class="form-control mb-3" placeholder="Tasa Interes (%)">
                         <button id="btnCrearPrestamo" class="btn btn-warning w-100">Crear</button>
                     </div>
                 </div>
