--- a/Front/index.html
+++ b/Front/index.html
@@ -32,6 +32,10 @@
                             placeholder="Monto en ETH">
                         <button id="btnDepositarPrestamista" class="btn btn-primary w-100">Depositar</button>
                     </div>
+                    <div class="card-body">
+                        <p class="card-text text-secondary" id="montoActual"> Monto Actual: </p>
+                        <button id="btnMontoActual" class="btn btn-primary w-100">Ver Saldo</button>
+                    </div>
                 </div>
             </div>
 
@@ -56,8 +60,12 @@
                 <div class="card shadow-sm border-0">
                     <div class="card-body">
                         <h5 class="card-title text-info">Pagar Cuota</h5>
-                        <p id="infoCuota" class="card-text text-secondary">Cuota Mensual: Cargando...</p>
                         <button id="btnPagar" class="btn btn-info w-100">Pagar</button>
+                    </div>
+                    <div class="card-body">
+                        <div id="infoPrestamo">
+                        </div>
+                        <button id="btnVerPrestamo" class="btn btn-info w-100">Ver Prestamo</button>
                     </div>
                 </div>
             </div>
